--- a/assets/styles/modules/navbar.less
+++ b/assets/styles/modules/navbar.less
@@ -7,7 +7,7 @@
     margin-bottom: 0;
     .site-logo {
         margin: 14px 15px;
-        @media screen and (min-width: @screen-xs-min) {
+        @media screen and (min-width: @screen-sm-min) {
             margin: 14px 0;
         }
         a {
@@ -210,7 +210,7 @@
         }
         .site-logo {
             margin: 5px 0;
-            @media screen and (min-width: @screen-xs-min) {
+            @media screen and (min-width: @screen-sm-min) {
                 margin: 14px 0;
             }            
             a {
